package iteratorpattern.menu;

import java.util.Iterator;

/**
 * Created by Alex on 4/23/2016.
 */
public interface Menu {

    Iterator createIterator();
}
